static/css/main.css
/* ... */
.tweetStats .selfRetweeted {
    color: var(--tw-rt);
}
.tweetStats .selfFavorited {
    color: var(--tw-fav);
}

.tweetStats .tweetConversation:hover {
    text-decoration: underline;
    color: var(--tw-re);
}

.sidebar,
.stats {
    position: absolute;
    top: -1px;
    width: calc(50vw - 400px - .5em);
    max-width: 360px;
}

.sidebar {
    border-top: 1px solid #000;
    right: 100%;
    height: 100%;
    overflow-y: auto;
    text-align: right;
}

.sidebar .selfMetrics {
    padding: var(--lc-padding);
    border-top: 1px solid #000;
    margin-top: 1em;
}

.sidebar .selfMetrics a {
    color: inherit;
    text-decoration: none;
}

.sidebar .selfMetrics a:hover {
    text-decoration: underline;
}

.stats {
    left: 100%;
    height: calc(100% + 1em + 1px);
    top: calc(-1em - 1px);
    overflow-y: auto;
    padding-top: 1em;
    box-sizing: border-box;
}

.channelItem {
    padding: var(--lc-padding);
    cursor: pointer;
    position: relative;
}

.channelItem:not(.editing):hover {
    background: var(--highlight);
}

.channelItem.pseudoChannel {
    color: var(--foreground-light);
}

.channelItem .channelButtons {
    display: none;
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    padding: var(--lc-padding);
}

.channelItem:hover .channelButtons {
    display: block;
    padding-left: .25em;
}

.channelItem .channelButton {
    border: 0;
    background: 0;
    cursor: pointer;
    padding: 0 .25em;
    color: inherit;
}

.channelItem .channelButton:hover {
    color: var(--foreground-light);
}

.channelItem .shortcutNumber {
    z-index: 0;
    position: absolute;
    top: 0;
    left: 0;
    padding: var(--lc-padding);
    color: var(--foreground-light);
}

.channelItem.solid:hover {
    background: var(--foreground-light);
}

.channelItem.solid .shortcutNumber {
    color: inherit;
}

.channelItem:hover .shortcutNumber {
    display: none;
}

.channelItem.editing {
    padding: 0;
}

.channelItem .channelInput {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.channelItem .channelInput input {
    width: 0;
    flex-grow: 1;
    flex-shrink: 1;
    padding: var(--lc-padding);
    background: 0;
    color: inherit;
}

.channelItem .channelInput .channelButton {
    padding: var(--lc-padding);
    flex-grow: 0;
    flex-shrink: 0;
}

.trends,
.fans {
    position: relative;
    border-top: 1px solid #000;
    min-height: 5em;
}

.trendsTitle,
.fansTitle {
    background: var(--background);
    padding: var(--lc-padding);
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    font-weight: bold;
}

.trends {
    padding: .6em 0;
}

.tweetTrend {
    width: 100%;
    font-size: .8em;
    padding: var(--lc-padding);
    padding-bottom: 1rem;
    box-sizing: border-box;
}

.trendMain {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
}

.tweetTrendText {
    word-break: break-word;
    max-height: 3em;
    overflow: hidden;
    position: relative;
    margin-right: 6px;
    flex-grow: 1;
    flex-shrink: 1;
    width: 0;
}

.tweetTrendText .date {
    color: var(--foreground-light);
}

.tweetTrendText::after {
    content: '';
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: calc(100% - 1em);
    background: linear-gradient(to bottom, var(--background-transparent), var(--background));
}

.publicMetrics {
    text-align: right;
    width: 8em;
}

.organicMetrics {
    overflow: hidden;
}

.organicMetrics .metricRow {
    float: left;
    box-sizing: border-box;
    line-height: 1.5em;
}

.organicMetrics .metricRow.half {
    width: 50%;
}

.UserList {
    padding-top: .5em;
}

.UserItem {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    box-sizing: border-box;
    padding: .3em .5em;
}

.UserItem .userItemPicture img {
    border-radius: 50%;
    height: 2.5em;
    width: 2.5em;
    display: block;
}

.UserItem .userItemNames {
    flex-grow: 1;
    flex-shrink: 1;
    margin: 0 6px;
    position: relative;
    cursor: pointer;
}

.UserItem .userItemNames .name {
    font-weight: bold;
    margin-bottom: 2px;
}

.UserItem .userItemNames .name a {
    color: inherit;
    text-decoration: none;
}

.UserItem .userItemNames .name a:hover {
    text-decoration: underline;
}

.UserItem .userItemNames .searches {
    font-size: .8em;
    color: var(--foreground-light);
    margin: 3px 0;
}

.UserItem .userItemNames .userItemFilter {
    display: inline;
    border: 0;
    background: transparent;
    cursor: pointer;
    color: inherit;
    padding: 0;
}

.UserItem .userItemNames .userItemFilter:hover {
    text-decoration: underline;
}

.UserItem .userItemNames .bio {
    font-size: .8em;
    line-height: 1.4em;
}

.UserItem .userItemNames .bio a {
    color: inherit;
}

.UserItem .userItemStats {
    text-align: right;
    font-size: .8em;
    white-space: nowrap;
}

.modalWrapper {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100;
    background: var(--shade);
}

.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: calc(100vw - 2em);
    max-height: calc(100vh - 2em);
    background: var(--background);
    display: flex;
    flex-direction: column;
}

.modalTitle {
    padding: var(--lc-padding);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    box-sizing: border-box;
}

.modalName {
    font-weight: bold;
}

.modalBody {
    overflow: auto;
    flex-grow: 1;
    flex-shrink: 1;
}

.timelineLoading {
    margin: 20vh auto;
    height: 3px;
    width: 80%;
    max-width: 300px;
    position: relative;
    background: var(--highlight);
    overflow: hidden;
}

.timelineLoading.thin {
    margin: 3em auto;
}
/* ... */

